src/test/deca/context/invalid/declClass-wrongMethodReturnTypeIntBoolean.context
declClass-wrongMethodReturnType.deca:7: